# zero_friction

./: .env.template  CONTRIBUTING.md  README.md  dependency.sh  pyproject.toml  requirements-dev.txt  requirements.txt
openapi_specs/: Attachments-1-0.yaml  Billing-1-0.yaml  Communication-1-0.yaml  Configuration-1-0.yaml  Forecasting-1-0.yaml  Masterdata-1-0.yaml  Metering-1-0.yaml  RegionalRegulations-1-0.yaml
sdk/attachments_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk/attachments_client/.openapi-generator/: FILES
sdk/attachments_client/attachments_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk/attachments_client/docs/: AddressDataObject.md  AdvanceRecalculationType.md  AggregateDetailsDTO.md  AggregationType.md  ApiResponseDTO.md  AttachmentDTO.md  AttachmentDTOApiResponseDTO.md  AttachmentDTOPagedResponseModelDTO.md  AttachmentDTOPagedResponseModelDTOApiResponseDTO.md  AttachmentsApi.md  BillingCompletenessQuickFilter.md  BillingCompletenessStatus.md  BillingCompletenessTariffInputType.md  BillingParametersDataObject.md  BooleanApiResponseDTO.md  BulkDeleteEntityAttachmentGroupRequest.md  BulkDeleteEntityAttachmentRequest.md  Calendar.md  CalendarAlgorithmType.md  CalendarWeekRule.md  CollectionCaseQuickFilter.md  CompareInfo.md  (+69 more)
sdk/billing_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk/communication_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk/configuration_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk/forecasting_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk/masterdata_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk/metering_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk/regionalregulations_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
zero_friction/core/: auth.py  config.py  sdk_client.py  sdk_exceptions.py  sdk_utils.py
zero_friction/patches/: apply_patched_billing_calculations_type_parameters_dto.py  core.py  patched_billing_calculation_type_parameters_dto.py  patched_customers_api.py
(+7597 files in other folders)
